[package]
name = "calc"
version = "0.1.0"
edition = "2021"
description = "Scientific calculator for Precursor - TI-85 competitor with ALG/RPN modes"

[dependencies]
# Core Xous
xous = "0.9.69"
xous-ipc = "0.10.9"
log = "0.4.14"
log-server = { package = "xous-api-log", version = "0.1.68" }
xous-names = { package = "xous-api-names", version = "0.9.70" }

# Graphics
gam = { path = "../../services/gam" }

# Timing
ticktimer-server = { package = "xous-api-ticktimer", version = "0.9.68" }

# Enum serialization
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }

# Settings storage
pddb = { path = "../../services/pddb" }

# Serialization for settings
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Math beyond std
libm = "0.2"
